--- a/src/no-image-card.css
+++ b/src/no-image-card.css
@@ -11,7 +11,7 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    --offset: 35.8%;
+    --offset: 40%;
     background-image: linear-gradient(
       135deg,
       #ff3d01 var(--offset),
@@ -33,6 +33,7 @@
     width: 35px;
     height: 35px;
     margin-right: 5px;
+    margin-left: 5px;
 }
 
 .no-image-card__div--icon-no > h1 {
