--- a/src/pokemon-details.css
+++ b/src/pokemon-details.css
@@ -12,7 +12,7 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    --offset: 35.8%;
+    --offset: 40%;
     background-image: linear-gradient(
       135deg,
       #ff3d01 var(--offset),
@@ -34,6 +34,7 @@
     width: 35px;
     height: 35px;
     margin-right: 5px;
+    margin-left: 5px;
 }
 
 .pokemon-details__div--icon-no > h1 {
