--- a/src/no-image-card.css
+++ b/src/no-image-card.css
@@ -14,7 +14,7 @@
     --offset: 40%;
     background-image: linear-gradient(
       135deg,
-      #ff3d01 var(--offset),
+      white var(--offset),
       rgb(0 , 0, 0) var(--offset)
   )
 }
