--- a/src/pokemon-details.css
+++ b/src/pokemon-details.css
@@ -8,14 +8,14 @@
 
 .pokemon-details__div--top-most {
     display: flex;
-    border-radius: 5px;
+    border-radius: 8px;
     align-items: center;
     justify-content: space-between;
     width: 100%;
     --offset: 40%;
     background-image: linear-gradient(
       135deg,
-      #ff3d01 var(--offset),
+      white var(--offset),
       rgb(0 , 0, 0) var(--offset)
   )
 }
@@ -55,6 +55,7 @@
     width: 50%;
     text-align: center;
     background-color: lightgray;
+    border-radius: 8px 0 0 8px;
 }
 
 .pokemon-details__div--left > p {
@@ -65,6 +66,7 @@
     width: 50%;
     text-align: center;
     background-color: white;
+    border-radius: 0 8px 8px 0;
 }
 
 .pokemon-details__div--right > p {
@@ -82,7 +84,7 @@
     width: 100%;
     background-color: #5a5a58;
     text-align: center;
-    border-radius: 5px;
+    border-radius: 8px;
 }
 
 .pokemon-details__div--stat-name {
@@ -119,7 +121,7 @@
 
 @media only screen and (min-width: 576px) and (max-width: 767px) {
 
-    .pokemon-details__div {
+    .pokemon-details__div { 
         width: 100%;
         margin-top: 25px;
         margin-bottom: 25px;
@@ -137,23 +139,10 @@
         width: 100%;
         margin-top: 25px;
         margin-bottom: 25px;
+        display: block;
     }
 
     .pokemon-details__div--wrapper > img {
         width: 100px;
-    }
-}
-
-@media only screen and (min-width: 0) and (max-width: 767px) and (orientation: landscape) {
-
-    .pokemon-details__div {
-        display: none;
-    }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991px) and (orientation: landscape) {
-    
-    .pokemon-details__div {
-        display: none;
     }
 }
