--- a/src/selected-pokemon.css
+++ b/src/selected-pokemon.css
@@ -243,9 +243,7 @@
     }
 
     .selected-pokemon__div--main > button {
-        display: block;
-        width: 100%;
-        margin-top: 25px;
+        display: none;
     }
 }
 
@@ -291,9 +289,7 @@
     }
 
     .selected-pokemon__div--main > button {
-        display: block;
-        width: 100%;
-        margin-top: 25px;
+        display: none;
     }
 
 }
